--- a/ESTest/pom.xml
+++ b/ESTest/pom.xml
@@ -19,6 +19,22 @@
             <artifactId>transport</artifactId>
             <version>7.12.0</version>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/com.alibaba/fastjson -->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.76</version>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.apache.lucene/lucene-core -->
+        <dependency>
+            <groupId>org.apache.lucene</groupId>
+            <artifactId>lucene-core</artifactId>
+            <version>8.8.2</version>
+        </dependency>
+
+
     </dependencies>
     
 </project>
