--- a/ESTest/pom.xml
+++ b/ESTest/pom.xml
@@ -40,6 +40,12 @@
             <version>8.8.2</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20200518</version>
+        </dependency>
+
 
     </dependencies>
     
