--- a/ESTest/pom.xml
+++ b/ESTest/pom.xml
@@ -33,11 +33,17 @@
             <version>1.2.76</version>
         </dependency>
 
-        <!-- https://mvnrepository.com/artifact/org.apache.lucene/lucene-core -->
+<!--        &lt;!&ndash; https://mvnrepository.com/artifact/org.apache.lucene/lucene-core &ndash;&gt;-->
+<!--        <dependency>-->
+<!--            <groupId>org.apache.lucene</groupId>-->
+<!--            <artifactId>lucene-core</artifactId>-->
+<!--            <version>8.8.2</version>-->
+<!--        </dependency>-->
+
         <dependency>
             <groupId>org.apache.lucene</groupId>
             <artifactId>lucene-core</artifactId>
-            <version>8.8.2</version>
+            <version>4.0.0</version>
         </dependency>
 
         <dependency>
