--- a/ESTest/pom.xml
+++ b/ESTest/pom.xml
@@ -72,8 +72,18 @@
             <artifactId>javacsv</artifactId>
             <version>2.0</version>
         </dependency>
-
-
+        <dependency>
+            <groupId>com.esotericsoftware</groupId>
+            <artifactId>kryo</artifactId>
+            <version>5.2.0</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.example</groupId>
+            <artifactId>LogCompress</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
 
 
     </dependencies>
