--- a/LogCompress/pom.xml
+++ b/LogCompress/pom.xml
@@ -21,6 +21,13 @@
 <!--            <version>0.1.7</version>-->
 <!--            <type>pom</type>-->
 <!--        </dependency>-->
+        <dependency>
+            <groupId>com.esotericsoftware</groupId>
+            <artifactId>kryo</artifactId>
+            <version>5.2.0</version>
+        </dependency>
+
+
     </dependencies>
 
 
