--- a/ESTest/pom.xml
+++ b/ESTest/pom.xml
@@ -33,12 +33,6 @@
             <version>1.2.76</version>
         </dependency>
 
-<!--        &lt;!&ndash; https://mvnrepository.com/artifact/org.apache.lucene/lucene-core &ndash;&gt;-->
-<!--        <dependency>-->
-<!--            <groupId>org.apache.lucene</groupId>-->
-<!--            <artifactId>lucene-core</artifactId>-->
-<!--            <version>8.8.2</version>-->
-<!--        </dependency>-->
 
         <dependency>
             <groupId>org.apache.lucene</groupId>
@@ -78,7 +72,11 @@
             <version>5.2.0</version>
             <scope>compile</scope>
         </dependency>
-
+        <dependency>
+            <groupId>org.apache.lucene</groupId>
+            <artifactId>lucene-core</artifactId>
+            <version>8.8.0</version>
+        </dependency>
 
 
     </dependencies>
